adiciona arquivo de edital e projetos faltando embarcados

--- a/seletiva.html
+++ b/seletiva.html
@@ -115,8 +115,8 @@
             <div class="container">
               <!-- <h1 class="display-4">Inscreva-se!</h1> -->
               <p class="lead">O edital e formularios de inscrições estarão disponiveis em breve.</p>
-              <form action="">
-                <button type="submit" class="btn btn-secondary mb-2" disabled>Edital</button>
+              <form action="archives/ps-2023/edital-ps2023-v1.pdf">
+                <button type="submit" class="btn btn-secondary mb-2">Edital</button>
               </form>
               <form action="https://forms.gle/XdLkgYXWHm6jTbrJ7">
                 <button type="submit" class="btn btn-secondary mb-2">Formulário de inscrição</button>
@@ -208,52 +208,52 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Administração</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="archives/ps-2023/projeto-ps2023-adm-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Comunicação</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a>
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="archives/ps-2023/projeto-ps2023-comunicacao-v1.pdf" class="badge badge-primary badge-pill">Edital</a>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Drones</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="archives/ps-2023/projeto-ps2023-drones-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Eletrônica</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="archives/ps-2023/projeto-ps2023-eletronica-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Embarcados</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Front-end</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="archives/ps-2023/projeto-ps2023-frontend-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Mecânica</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="archives/ps-2023/projeto-ps2023-mecanica-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Software 2D</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="archives/ps-2023/projeto-ps2023-2d-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Software SSL</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="archives/ps-2023/projeto-ps2023-ssl-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Software VSS</div>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a href="https://robocin.com.br/archives/ps/Comunicacao_Individual_Processo_Seletivo_2022.pdf" class="badge badge-primary badge-pill">Edital</a> 
+                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="archives/ps-2023/projeto-ps2023-vss-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                   </ul>
                 </div>
