formulario de visitas

--- a/seletiva.html
+++ b/seletiva.html
@@ -114,9 +114,12 @@
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <!-- <h1 class="display-4">Inscreva-se!</h1> -->
-              <p class="lead">O edital e formularios de inscrições estarão disponiveis em breve.</p>
+              <p class="lead">Aqui você encontra o edital deste processo seletivo, o formulario de inscrição para participar das visitas ao laboratório do RobôCIn e o formulario de inscrição para participar deste processo seletivo.</p>
               <form action="archives/ps-2023/edital-ps2023-v1.pdf">
                 <button type="submit" class="btn btn-secondary mb-2">Edital</button>
+              </form>
+              <form action="https://forms.gle/quLMeSJYbeBHMqgS8">
+                <button type="submit" class="btn btn-secondary mb-2">Formulário de Visitas</button>
               </form>
               <form action="https://forms.gle/XdLkgYXWHm6jTbrJ7">
                 <button type="submit" class="btn btn-secondary mb-2">Formulário de inscrição</button>
