pdf do projeto de embarcados

--- a/seletiva.html
+++ b/seletiva.html
@@ -231,7 +231,7 @@
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Embarcados</div>
                       <a class="badge badge-primary badge-pill mr-2">Video</a>
-                      <a class="badge badge-primary badge-pill">Edital</a> 
+                      <a href="archives/ps-2023/projeto-ps2023-embarcados-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Front-end</div>
