incluindo link para os videos

--- a/seletiva.html
+++ b/seletiva.html
@@ -211,51 +211,51 @@
                   <ul class="list-group">
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Administração</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://www.youtube.com/watch?v=r1LRTAmaVjU" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-adm-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Comunicação</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://www.youtube.com/watch?v=f47B_h9gk2o" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-comunicacao-v1.pdf" class="badge badge-primary badge-pill">Edital</a>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Drones</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://www.youtube.com/watch?v=dTTRc19mE8Y" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-drones-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Eletrônica</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://www.youtube.com/watch?v=CIzs2gbSVKI" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-eletronica-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Embarcados</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://youtu.be/INj03biUD6k" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-embarcados-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Front-end</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://www.youtube.com/watch?v=J35PVX7BbrY" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-frontend-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Mecânica</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://www.youtube.com/watch?v=eOxkETehd4A" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-mecanica-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Software 2D</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://www.youtube.com/watch?v=oNO4lUKoyYc" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-2d-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Software SSL</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://www.youtube.com/watch?v=xEQv0Wfi8vU" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-ssl-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                     <li class="list-group-item d-flex align-items-center justify-content-between">
                       <div class="mr-auto">Software VSS</div>
-                      <a class="badge badge-primary badge-pill mr-2">Video</a>
+                      <a href="https://www.youtube.com/watch?v=y1gsZP7-5T8" class="badge badge-primary badge-pill mr-2">Video</a>
                       <a href="archives/ps-2023/projeto-ps2023-vss-v1.pdf" class="badge badge-primary badge-pill">Edital</a> 
                     </li>
                   </ul>
