Classe invisível de margem superior

--- a/seletiva.html
+++ b/seletiva.html
@@ -102,7 +102,7 @@
         
         <section class="site-section bg-light" id="pricing-section" style="height: 100%; padding: 0%;padding-top:2%;">
 
-          <div class="jumbotron bg-light" id="j-landing">
+          <div class="jumbotron invisible_class_section bg-light" id="j-landing">
             <div class="s" style="margin: auto;">
             <h1 class="display-2" style="text-align: center" id="landing-intro">Seletiva RobôCIn 2023!</h1>
               <p class="col-md-1; lead" style="text-align: center;" id="landing-description">
