update(navbar): remove 'members' item

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       <li><a class="nav-link" id="twod" href="./simulacao2d.html" tkey="2D"></a></li>
                     </ul>
                   </li>
-                <li><a href="./membros.html" class="nav-link" id="members" tkey="members"></a></li>
+                <!-- <li><a href="./membros.html" class="nav-link" id="members" tkey="members"></a></li> -->
                 <li><a href="./publicacoes.html" class="nav-link" id="papers" tkey="papers"></a></li>
                 <li><a href="./seletiva.html" class="nav-link" id="sel" tkey="join-us"></a></li>
                 <li><a href="./contato.html" class="nav-link" id="contact" tkey="contact"></a></li>
