--- a/seletiva.html
+++ b/seletiva.html
@@ -73,7 +73,7 @@
                         <li><a class="nav-link" id="twod" href="./simulacao2d.html" tkey="2D"></a></li>
                       </ul>
                     </li>
-                    <li><a href="./membros.html" class="nav-link" tkey="members"></a></li>
+                    <!-- <li><a href="./membros.html" class="nav-link" tkey="members"></a></li> -->
                     <li><a href="./publicacoes.html" class="nav-link" tkey="papers"></a></li>
                     <li><a href="./seletiva.html" class="nav-link" tkey="join-us"></a></li>
                     <li><a href="./contato.html" class="nav-link" tkey="contact"></a></li>
