--- a/simulacao2d.html
+++ b/simulacao2d.html
@@ -139,6 +139,7 @@
               <thead class="bg-primary">
                 <tr>
                   <th scope="col">Competition</th>
+                  <th scope="col">2023</th>
                   <th scope="col">2022</th>
                   <th scope="col">2021</th>
                   <th scope="col">2020</th>
@@ -149,6 +150,7 @@
               <tbody>
                 <tr>
                   <th scope="row">RoboCup</th>
+                  <td tkey="cat.2d.robocup23"></td>
                   <td tkey="cat.2d.robocup22"></td>
                   <td tkey="cat.2d.robocup21"></td>
                   <td tkey="cat.2d.robocup20"></td>
@@ -157,7 +159,10 @@
                 </tr>
                 <tr>
                   <th scope="row">LARC</th>
-                  <td ></td>
+                  <td tkey="cat.2d.larc23"></td>
+                  <td>
+                    <span class="badge badge-pill badge-warning" tkey="cat.2d.larc22"></span>
+                  </td>
                   <td><span class="badge badge-pill badge-warning" tkey="cat.2d.larc21"></span></td>
                   <td tkey="cat.2d.larc20"></td>
                   <td tkey="cat.2d.larc19"></td>
@@ -165,7 +170,8 @@
                 </tr>
                 <tr>
                   <th scope="row">IRONCup</th>
-                  <td></td>
+                  <td tkey="cat.2d.iron23"></td>
+                  <td tkey="cat.2d.iron22"></td>
                   <td tkey="cat.2d.iron21"></td>
                   <td tkey="cat.2d.iron20"></td>
                   <td tkey="cat.2d.iron19"></td>
