--- a/verysmallsize.html
+++ b/verysmallsize.html
@@ -144,6 +144,8 @@
               <thead class="bg-primary">
                 <tr>
                   <th scope="col">Competition</th>
+                  <th scope="col">2023</th>
+                  <th scope="col">2022</th>
                   <th scope="col">2021</th>
                   <th scope="col">2020</th>
                   <th scope="col">2019</th>
@@ -155,7 +157,11 @@
               <tbody>
                 <tr>
                   <th scope="row">LARC</th>
-                  <td><span class="badge badge-pill badge-warning" tkey="cat.vss.larc21"></span></td>
+                  <td tkey="cat.vss.larc23"></td>
+                  <td>
+                    <span class="badge badge-pill badge-warning" tkey="cat.vss.larc22"></span>
+                  </td>
+                  <td tkey="cat.vss.larc21"></td>
                   <td tkey="cat.vss.larc20"></td>
                   <td tkey="cat.vss.larc19"></td>
                   <td tkey="cat.vss.larc18"></td>
@@ -164,12 +170,16 @@
                 </tr>
                 <tr>
                   <th scope="row">IRONCup</th>
-                  <td ><span class="badge badge-pill badge-warning" tkey="cat.vss.iron21"></span></td>
+                  <td tkey="cat.vss.iron23"></td>
+                  <td tkey="cat.vss.iron22"></td>
+                  <td>
+                    <span class="badge badge-pill badge-warning" tkey="cat.vss.iron21"></span>
+                  </td>
                   <td tkey="cat.vss.iron20"></td>
                   <td tkey="cat.vss.iron19"></td>
                   <td tkey="cat.vss.iron18"></td>
-                  <td>N/A</td>
-                  <td>N/A</td>
+                  <td tkey="cat.vss.iron17"></td>
+                  <td tkey="cat.vss.iron16"></td>
                 </tr>
               </tbody>
             </table>
