--- a/membros.html
+++ b/membros.html
@@ -104,13 +104,22 @@
 
     <section class="site-section border-bottom bg-light" id="team-section">
         <div class="container">
-            <div class="row mb-5 justify-content-center">
+            <div class="row justify-content-center mt-5">
+              <div class="col-md-6 text-center">
+                <h1 class="mt-3" tkey="404.title"></h1>
+                <p class="lead" tkey="404.description"></p>
+                <a href="/" class="btn btn-primary" tkey="404.button_label"></a>
+              </div>
+            </div>
+            
+            <!-- Members list  -->
+            <!-- <div class="row mb-5 justify-content-center">
                 <div class="col-md-8 text-center">
                     <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="" tkey="m.title"></h2>
                     <p class="lead" data-aos="fade-up" data-aos-delay="100" tkey="m.desc"><p>
                 </div>
             </div>
-            <div class="row" id="team-member-images">
+            <div class="row" id="team-member-images"> -->
     
             </div>
         </div>
