--- a/seletiva.html
+++ b/seletiva.html
@@ -75,7 +75,7 @@
                     </li>
                     <!-- <li><a href="./membros.html" class="nav-link" tkey="members"></a></li> -->
                     <li><a href="./publicacoes.html" class="nav-link" tkey="papers"></a></li>
-                    <li><a href="./seletiva.html" class="nav-link" tkey="join-us"></a></li>
+                    <!-- <li><a href="./seletiva.html" class="nav-link" tkey="join-us"></a></li> -->
                     <li><a href="./contato.html" class="nav-link" tkey="contact"></a></li>
                     <div class="btn-group" role="group">
                       <button id="btnGroupDrop1" type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tkey="lang">
