update(results): update Home page results and SSL results

--- a/smallsizeleague.html
+++ b/smallsizeleague.html
@@ -162,13 +162,7 @@
             <tbody>
               <tr>
                 <th scope="row">RoboCup</th>
-                <td>
-                  <span 
-                    class="badge badge-pill badge-warning" 
-                    tkey="cat.ssl.robocup23"
-                  >
-                  </span>
-                </td>
+                <td tkey="cat.ssl.robocup23"></td>
                 <td tkey="cat.ssl.robocup22"></td>
                 <td tkey="cat.ssl.robocup21"></td>
                 <td tkey="cat.ssl.robocup20"></td>
